[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Game_Logic/Simple_Round_Logic/Simple_Round_Logic.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Scary.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/Upbeat.mp3" type="AudioStream" id=3]

[node name="Simple_Round_Logic" type="Node"]
script = ExtResource( 1 )

[node name="Spawn_Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Between_Round_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Spawned_Enemies" type="Spatial" parent="."]

[node name="Spawned_Players" type="Spatial" parent="."]

[node name="Sound_Round_Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 1.0

[node name="Sound_Round_End" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[connection signal="timeout" from="Spawn_Timer" to="." method="_on_Spawn_Timer_timeout"]
[connection signal="timeout" from="Between_Round_Timer" to="." method="_on_Between_Round_Timer_timeout"]
